# LuaJIT-portaudio

./: .gitmodules  CMakeLists.txt  README.md  portaudio_ffi.lua
examples/: listdevices.lua  test_sine.lua  test_sine_devices.lua
